fix fade behind bugs

--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 *{
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -160,13 +161,18 @@
     display:none;
   }
   #inside{
-    margin: 50px 350px 100px 350px;
+    
+    top: 50%;
+    left: 50%;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    width: 70%;
     box-shadow: 5px 10px 12px #14213d;
     
   }
   body{
     background-color: #84a98c;
-    
+  
   }
   #cke_content{
     
@@ -214,8 +220,9 @@
     background-color: rgba(0, 0, 0, 0.5);
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    top:0px;
-    left: 0px;
+    position: fixed;
+   top:0px;
+   left:0px;
+  
     display: none;
-}
+} 
